@@ -121,7 +121,7 @@ Set twofold prefix stripping (but single suffix stripping) for agglutinative
 languages with right-to-left writing system.
 .IP "LANG langcode"
 Set language code. In Hunspell may be language specific codes enabled
-by LANG code. At present there are az_AZ, hu_HU, TR_tr specific
+by LANG code. At present there are az_AZ, hu_HU, tr_TR specific
 codes in Hunspell (see the source code).
 .IP "IGNORE characters"
 Ignore characters from dictionary words, affixes and input words.
