@@ -7,7 +7,9 @@
 
 #include "hunspell.hxx"
 #include "hunspell.h"
-#include "config.h"
+#ifndef MOZILLA_CLIENT
+#    include "config.h"
+#endif
 #include "csutil.hxx"
 
 Hunspell::Hunspell(const char * affpath, const char * dpath, const char * key)
