@@ -2,15 +2,17 @@
 #define _HUNSPELL_VISIBILITY_H_
 
 #if defined(HUNSPELL_STATIC)
-#define LIBHUNSPELL_DLL_EXPORTED
+#  define LIBHUNSPELL_DLL_EXPORTED
+#elif defined(_MSC_VER)
+#  if defined(BUILDING_LIBHUNSPELL)
+#    define LIBHUNSPELL_DLL_EXPORTED __declspec(dllexport)
+#  else
+#    define LIBHUNSPELL_DLL_EXPORTED __declspec(dllimport)
+#  endif
 #elif BUILDING_LIBHUNSPELL && @HAVE_VISIBILITY@
-#define LIBHUNSPELL_DLL_EXPORTED __attribute__((__visibility__("default")))
-#elif BUILDING_LIBHUNSPELL && defined(_MSC_VER)
-#define LIBHUNSPELL_DLL_EXPORTED __declspec(dllexport)
-#elif defined _MSC_VER
-#define LIBHUNSPELL_DLL_EXPORTED __declspec(dllimport)
+#  define LIBHUNSPELL_DLL_EXPORTED __attribute__((__visibility__("default")))
 #else
-#define LIBHUNSPELL_DLL_EXPORTED
+#  define LIBHUNSPELL_DLL_EXPORTED
 #endif
 
 #endif
