@@ -2,8 +2,8 @@
 #include <windows.h>
 
 VS_VERSION_INFO VERSIONINFO
-FILEVERSION 1,2,10,0
-PRODUCTVERSION 1,2,10,0
+FILEVERSION 1,2,11,0
+PRODUCTVERSION 1,2,11,0
 FILEFLAGSMASK 0x17L
 FILEFLAGS 0
 FILEOS VOS_NT_WINDOWS32
