@@ -1,3 +1,3 @@
 EXTRA_DIST=hunspelldll.h hunspelldll.c hunspelldll.dev README \
-		      config.h Hunspell.rc Hunspell.sln Makefile.cygwin \
-		      hunspell.vcproj libhunspell.vcproj testparser.vcproj
+	config.h Hunspell.rc Hunspell.sln Makefile.cygwin \
+	hunspell.vcproj libhunspell.vcproj testparser.vcproj
