@@ -1,3 +1,6 @@
+2010-05-05 Caolán McNamara <cmc at OOo>:
+	* rhbz#589326 malloc of int that should have been of char**
+
 2010-04-28 Caolán McNamara <cmc at OOo>:
 	* moz#550942 get_xml_list doesn't handle failure from get_xml_par
 
